<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="@dimen/_300sdp"
        android:layout_height="@dimen/_350sdp"
        android:background="@color/transparent"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:layout_marginVertical="@dimen/_5sdp">
        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_300sdp"
            android:layout_height="@dimen/_300sdp"
            app:cardCornerRadius="@dimen/_5sdp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#D9D9D9"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_20sdp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/DailyRewards"
                        android:textColor="@color/app_color"
                        android:textSize="@dimen/_16sdp" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/excitedrewards"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_10sdp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/excitedreward"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp" />
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginVertical="@dimen/_5sdp"
                        android:src="@drawable/coin"/>
                    <TextView
                        android:id="@+id/rewordCoin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center_horizontal"
                        android:text="00"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp" />
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/claimBTN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginHorizontal="@dimen/_30sdp"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:background="@drawable/button_bg">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:padding="@dimen/_7sdp"
                        android:text="@string/Claimrewards"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </RelativeLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <ImageView
            android:id="@+id/close_BTN"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/close_button" />
    </RelativeLayout>
</RelativeLayout>